=========================================================================
CHANGE LOG
=========================================================================

2008-12-16 Warren L. DeLano <warren@delsci.com>

	* fixed another object-name-dragging bug
	
	* mpeg1 export menu item

	* fixed putty scaling bugs
	
2008-12-14 Warren L. DeLano <warren@delsci.com>

	* added support for writing ppm files (awkwardly: via png)
	
2008-12-13 Warren L. DeLano <warren@delsci.com>

	* added error message for when align/super atom alignment fails
	
2008-12-07 Warren L. DeLano <warren@delsci.com>

	* fixed split_states behavior to allow prefix to override titles
	
2008-12-07 Warren L. DeLano <warren@delsci.com>

	* updated pymol/__init__.py OpenGL autoconfiguration
	
2008-12-04 Warren L. DeLano <warren@delsci.com>

	* continued major overhaul of the builder

	* fixed longstanding object name right-dragging bugs
	
2008-11-29 Warren L. DeLano <warren@delsci.com>

	* various updates to the builder
	
	* auto_overlay setting

	* stick_ball_color, stick_h_scale settings

	* added support for negative stick_radius, stick_ball_ratio
	
2008-11-22 Warren L. DeLano <warren@delsci.com>

	* fixed incompatibility with Roche Pocket Viewer
	
2008-11-12 Warren L. DeLano <warren@delsci.com>

	* added max_ups setting to govern excessive geometry flux
		
2008-11-10 Warren L. DeLano <warren@delsci.com>

	* further work on the builder
	
	* sculpting engine now respects atom flag 3 (fixed atoms)
	
2008-11-05 Warren L. DeLano <warren@delsci.com>

	* added Mac-only menu for configuring X11 click-through behavior
	
	* updated open-source splash image

2008-10-04 Warren L. DeLano <warren@delsci.com>

	* first rough attempt at IDTF export for U3D / 3D-PDF support
	
2008-09-29 Warren L. DeLano <warren@delsci.com>

	* fixed subtle div-zero bug in the view interpolation code
	
2008-09-24 Warren L. DeLano <warren@delsci.com>

	* fixed crash bug with blank CGO object

2008-09-12
